--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "code-p",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "author": "Ionic Framework",
   "homepage": "https://ionicframework.com/",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "staging:ad": "appcenter codepush release -a shuangyan_m-hotmail.com/test -c android/app/src/main/assets/public/ -t 1.0.0 -d Staging",
+    "sad": "node ./update.js",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -19,12 +21,20 @@
     "@angular/platform-browser": "~12.1.1",
     "@angular/platform-browser-dynamic": "~12.1.1",
     "@angular/router": "~12.1.1",
+    "@capacitor-community/http": "^1.0.0",
+    "@capacitor/android": "3.2.2",
     "@capacitor/app": "1.0.3",
     "@capacitor/core": "3.2.2",
+    "@capacitor/device": "^1.0.0",
+    "@capacitor/dialog": "^1.0.0",
+    "@capacitor/filesystem": "^1.0.0",
     "@capacitor/haptics": "1.0.3",
     "@capacitor/keyboard": "1.0.3",
     "@capacitor/status-bar": "1.0.3",
     "@ionic/angular": "^5.5.2",
+    "capacitor-codepush": "https://gitee.com/fineone/capacitor-codepush.git",
+    "cordova-plugin-apkupdater": "^2.6.1",
+    "ng-zorro-antd-mobile": "^5.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
@@ -45,6 +55,7 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
     "@typescript-eslint/eslint-plugin": "4.16.1",
+    "apk-update": "^1.0.2",
     "@typescript-eslint/parser": "4.16.1",
     "eslint": "^7.6.0",
     "eslint-plugin-import": "2.22.1",
